Mon Apr  6 23:16:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (CFLAGS, CXXFLAGS): override with $cflags and
	  $cxxflags if not given.  [ruby-core:23130]

Mon Apr  6 19:26:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (utime_failed): refined the error message for EINVAL on
	  DOSISH platforms, where it may fail depending on filesystems.
	  see [ruby-dev:38277].

Mon Apr  6 16:38:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (sys_fail2, rb_file_s_readlink, BUFCHECK, rmext),
	  (rb_file_s_basename): get rid of overflow.

Mon Apr  6 15:11:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (int_chr): checsk overflow.

Mon Apr  6 10:49:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/stringio/test_stringio.rb (test_path): StringIO#path is no
	  longer defined.  [ruby-dev:38254]

Mon Apr  6 10:47:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_path): removed.  [ruby-dev:38254]

Sun Apr  5 18:02:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_fd_resize): does nothing on Win32.

Sat Apr  4 17:05:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (RB_NUM_COERCE_FUNCS_NEED_OPID): macro to
	  check compatibility.  [ruby-dev:38162]

Sat Apr  4 07:38:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb (sitearch): default to arch.

Fri Apr  3 14:02:42 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/irb/completion.rb (IRB::InputCompletor::Operators): Add
	  overloadable negative operators.

	* lib/irb/ruby-lex.rb (RubyLex#lex_init): Support overloadable
	  negative operators.

	* lib/irb/ruby-lex.rb (RubyLex#identify_identifier): Minus signs
	  need to be escaped in regexp character class.

	* misc/ruby-mode.el (ruby-font-lock-keywords, ruby-parse-partial):
	  Support overloadable negative operators.

Fri Apr  3 12:45:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
